# CodeScaler

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: download_data.py  prepare_deepcoder.py  prepare_evaluation.py  system_prompts.py
recipe/codescaler/: REWARD_MODELS.md  __init__.py  acecoder.py  codescaler_fsdp_workers.py  codescaler_ray_trainer.py  codescaler_reward.py  codescaler_reward_types.py  codescaler_tokenizer.py  codescaler_utils.py  eval.py  livecodebench.py  main_codescaler.py
scripts/: eval.sh  eval_uv.sh  prepare_data.sh  prepare_data_uv.sh  train.sh  train_codescaler.sh  train_codescaler_uv.sh  train_themis.sh  train_themis_32b_multinode.sh  train_themis_32b_multinode_uv.sh  train_themis_uv.sh  train_uv.sh
verl/trainer/config/data/: legacy_data.yaml
verl/trainer/config/rollout/: rollout.yaml
verl/trainer/ppo/: reward.py
verl/utils/reward_score/prime_code/: testing_util.py
verl/workers/: fsdp_workers.py
verl/workers/config/: rollout.py
verl/workers/rollout/vllm_rollout/: vllm_rollout_spmd.py
